# nectar

./: .gitignore  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml  requirements.txt
examples/: config.yaml
opencode_harness/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  models.py  models_catalog.py
opencode_harness/agent/: __init__.py  loop.py  prompts.py
opencode_harness/auth/: __init__.py  byop.py  login.py  store.py
opencode_harness/provider/: __init__.py  client.py
opencode_harness/tools/: __init__.py  bash.py  edit.py  files.py  pathutil.py  registry.py  safety.py  search.py  web.py
opencode_harness/ui/: __init__.py  art.py  console.py  format_output.py  picker.py  session.py  theme.py  tui.py
tests/: test_art.py  test_byop.py  test_coding_tools.py  test_config.py  test_format_output.py  test_logging.py  test_loop_circuit.py  test_models.py  test_models_catalog.py  test_registry.py  test_safety.py  test_theme.py
