[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-harness"
version = "0.1.0"
description = "Nectar / honey — open coding agent for the terminal with Pollinations Pollen login."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "murderszn" }]
keywords = ["agent", "cli", "llm", "honey", "nectar", "pollinations", "opencode", "coding-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "pyyaml>=6.0",
  "beautifulsoup4>=4.12",
  "textual>=0.80",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
honey = "opencode_harness.cli:main"
opencode-harness = "opencode_harness.cli:main"
och = "opencode_harness.cli:main"

[tool.setuptools.packages.find]
include = ["opencode_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
